--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,20 @@ nav button {
   font-size: 1.5em;
   border: none;
   margin: 1rem;
+  cursor: pointer;
+}
+
+.progress {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 5px;
+  background: white;
+  opacity: 0.5;
+  transition: width 0.5s;
+}
+
+.container {
+  height: 100vh;
+  overflow: hidden;
 }
