--- a/src/slides/slides.css
+++ b/src/slides/slides.css
@@ -4,6 +4,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  animation: slide .5s forwards;
+}
+
+@keyframes slide {
+  0% {
+    padding-top: 2rem;
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.9;
+  }
+
+  100% {
+    padding-top: 0;
+    opacity: 1;
+  }
 }
 
 .flex-columns {
@@ -40,6 +57,7 @@ figcaption {
 
 h1 {
   font-size: 2.5em;
+  /* animation: slide 1s forwards; */
 }
 
 h2 {
