--- a/src/slides/slides.css
+++ b/src/slides/slides.css
@@ -1,5 +1,6 @@
 .slide {
-  min-height: 100vh;
+  height: 100vh;
+  overflow: scroll;
   display: flex;
   flex-direction: column;
   align-items: center;
